# enigma2-openvision-sh4

./: .travis.yml  Navigation.py  README.md  RecordTimer.py  ServiceReference.py  StartEnigma.py  build.sh  configure.ac  enigma2.bb  keyids.py  mytest.py  skin.py  translate.py
CI/: build.sh
data/: Makefile.am  keymap.xml  (+2 more)
lib/python/Plugins/SystemPlugins/: Makefile.am
lib/python/Plugins/SystemPlugins/HdmiCEC/: plugin.py
lib/python/Plugins/SystemPlugins/Hotplug/: plugin.py
lib/python/Plugins/SystemPlugins/KeymapManager/: plugin.py
lib/python/Plugins/SystemPlugins/KeymapManager/meta/: plugin_keymapmanager.xml
lib/python/Plugins/SystemPlugins/OSDPositionSetup/: overscanwizard.py  plugin.py
lib/python/Plugins/SystemPlugins/OnErrorRestartService/: plugin.py
lib/python/Plugins/SystemPlugins/SH4BoosterControl/: plugin.py
lib/python/Plugins/SystemPlugins/SH4OSDAdjustment/: plugin.py
lib/python/Plugins/SystemPlugins/Satfinder/: plugin.py
lib/python/Plugins/SystemPlugins/SoftwareManager/: BackupRestore.py
lib/python/Plugins/SystemPlugins/SparkUnionTunerType/: plugin.py
lib/python/Plugins/SystemPlugins/SystemOptions/: Makefile.am  plugin.py
lib/python/Plugins/SystemPlugins/VFD-Icons/: plugin.py
lib/python/Plugins/SystemPlugins/VideoClippingSetup/: plugin.py
lib/python/Plugins/SystemPlugins/VideoEnhancement/: VideoEnhancement.py  plugin.py
lib/python/Plugins/SystemPlugins/VideoTune/: VideoFinetune.py
lib/python/Plugins/SystemPlugins/Videomode/: VideoHardware.py  VideoWizard.py  plugin.py
lib/python/Plugins/SystemPlugins/WirelessLan/: plugin.py
(+227 files in other folders)
